--- a/.gitignore
+++ b/.gitignore
@@ -54,4 +54,14 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+### Firebase ###
+.idea
+**/node_modules/*
+**/.firebaserc
+
+### Firebase Patch ###
+.runtimeconfig.json
+.firebase/
+firebase.json
+
 # End of https://www.toptal.com/developers/gitignore/api/vuejs,visualstudiocode,windows
